fixing layout bug

--- a/src/pages/account-registration/src/layout/css/itens-container.css
+++ b/src/pages/account-registration/src/layout/css/itens-container.css
@@ -43,9 +43,6 @@
 
 .submit {
   cursor: pointer;
-  min-width: 20%;
-  margin: 5% 0% 5% 10%;
-  padding: 1%;
   background-color: #454753;
   color: white;
   align-items: center;
